--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="backgroundColor">#fafafa</color>
     <color name="colorPrimary">#379fbd</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#379fbd</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="default_button">#34e5eb</color>
     <color name="pressed_button">#87eff3</color>
     <color name="disabled_button">#a3a3a3</color>
-
 </resources>
