--- a/android/app/src/main/res/layout/fragment_messages.xml
+++ b/android/app/src/main/res/layout/fragment_messages.xml
@@ -5,18 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".Messages">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:textSize="50dp"/>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_gravity="center" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
