--- a/android/app/src/main/res/layout/activity_chat.xml
+++ b/android/app/src/main/res/layout/activity_chat.xml
@@ -25,7 +25,7 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="8dp">
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/back_button"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
@@ -47,7 +47,7 @@
                 app:layout_constraintStart_toEndOf="@+id/back_button"
                 app:layout_constraintTop_toTopOf="@+id/back_button" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title_toolbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edt_chat"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -80,7 +80,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_chat"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_chat"
         style="@style/ButtonStyle"
         android:layout_width="wrap_content"
